[package]
name = "gd32vf103-flashloader"
version = "0.1.0"
authors = ["9names"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Todo: avoid all panics
# panic-never  = "0.1.0"
panic-abort = "0.3.2"
gd32vf103-pac = "0.4.0"


[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = 3